# QuantPits

./: .codecov.yml  .dockerignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.test  README.md  README_zh.md  SECURITY.md  pyproject.toml  requirements.txt  run_tests_docker.sh
docs/: 00_SYSTEM_OVERVIEW.md  01_TRAINING_GUIDE.md  02_BRUTE_FORCE_GUIDE.md  03_ENSEMBLE_FUSION_GUIDE.md  04_POST_TRADE_GUIDE.md  05_PREDICT_ONLY_GUIDE.md  06_ORDER_GEN_GUIDE.md  30_ROLLING_TRAINING_GUIDE.md  70_WALKTHROUGH.md
docs/en/: 00_SYSTEM_OVERVIEW.md  01_TRAINING_GUIDE.md  02_BRUTE_FORCE_GUIDE.md  03_ENSEMBLE_FUSION_GUIDE.md  04_POST_TRADE_GUIDE.md  05_PREDICT_ONLY_GUIDE.md  06_ORDER_GEN_GUIDE.md  30_ROLLING_TRAINING_GUIDE.md  70_WALKTHROUGH.md
landing/: index.html
quantpits/scripts/: analyze_ensembles.py  brute_force_ensemble.py  brute_force_fast.py  config_loader.py  ensemble_fusion.py  incremental_train.py  init_workspace.py  migrate_records.py  minentropy_ensemble.py  order_gen.py  plot_model_opinions.py  pretrain.py  prod_post_trade.py  prod_predict_only.py  rolling_train.py  run_analysis.py  signal_ranking.py  static_train.py  strategy.py  train_utils.py
quantpits/scripts/analysis/: ensemble_analyzer.py  execution_analyzer.py  portfolio_analyzer.py  single_model_analyzer.py  utils.py
quantpits/scripts/brokers/: gtja.py
quantpits/utils/: backtest_utils.py  constants.py  operator_log.py  predict_utils.py  run_context.py  search_utils.py  train_utils.py
tests/: conftest.py
ui/: dashboard.py
workspaces/Demo_Workspace/: run_env.ps1
(+71 files in other folders)
